--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <script src="lib/react-router.js"></script>
   <script src="lib/react-router-dom.js"></script>
 
+  <script src="https://kit.fontawesome.com/57223ba89b.js" crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="assets/style/main.css">
   <title>React Starter</title>
 </head>
